--- a/custom_builds/6/distros/12.x/pom.xml
+++ b/custom_builds/6/distros/12.x/pom.xml
@@ -119,7 +119,7 @@
                 <module>evaluation</module>
                 <module>da_evalprovider</module>
                 <module>attendance</module>
-                <module>bigbluebutton</module>
+                <!-- module>bigbluebutton</module -->
             </modules>
         </profile>
 
