--- a/custom_builds/155/distros/11.x/pom.xml
+++ b/custom_builds/155/distros/11.x/pom.xml
@@ -116,6 +116,7 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>SakaiXAPI-Provider</module>
+                <module>attendance</module>
 
                 <!--
                 <module>gradebook2</module>
