--- a/custom_builds/159/distros/12.x/pom.xml
+++ b/custom_builds/159/distros/12.x/pom.xml
@@ -118,8 +118,7 @@
                 <module>blogwow</module>
                 <module>attendance</module>
                 <module>bbb-tool</module>
-                <module>irubric-core</module>
-                <module>irubric-tool</module>
+                <module>gradebook-export</module>
             </modules>
         </profile>
 
