Adding attendance to build

--- a/custom_builds/142/distros/12.x/pom.xml
+++ b/custom_builds/142/distros/12.x/pom.xml
@@ -118,7 +118,8 @@
                 <module>web</module>
                 <module>webjars</module>
                 <module>webservices</module>
-                <!--module>bbb-tool</module-->
+                <module>attendance</module>
+                <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
