--- a/custom_builds/165/distros/sakai-11.x/pom.xml
+++ b/custom_builds/165/distros/sakai-11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>clog</module>
                 <module>evaluation</module>
                 <module>blogwow</module>
+                <module>gradebook-export</module>
 
                 <!--
                 <module>gradebook2</module>
