--- a/custom_builds/165/distros/12.x/pom.xml
+++ b/custom_builds/165/distros/12.x/pom.xml
@@ -118,7 +118,7 @@
                 <module>blogwow</module>
                 <module>clog</module>
                 <module>evaluation</module>
-                <module>certification</module>
+                <module>gradebook-export</module>
                 <!--module>rsmart</module-->
             </modules>
         </profile>
