--- a/custom_builds/155/distros/12.x/pom.xml
+++ b/custom_builds/155/distros/12.x/pom.xml
@@ -115,7 +115,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>blogwow</module>
+                <module>clog</module>
                 <module>attendance</module>
                 <module>rsmart</module>
                 <module>SakaiXAPI-Provider</module>
