--- a/custom_builds/155/distros/11.x/pom.xml
+++ b/custom_builds/155/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
                 <module>SakaiXAPI-Provider</module>
                 <module>attendance</module>
+                <module>blogwow</module>
 
                 <!--
                 <module>gradebook2</module>
