Adding rsmart to build

--- a/custom_builds/181/distros/rsmart-10.x/pom.xml
+++ b/custom_builds/181/distros/rsmart-10.x/pom.xml
@@ -103,6 +103,7 @@
                 <module>postem</module>
                 <module>presence</module>
                 <module>profile2</module>
+                <module>rsmart</module>
                 <!--
 	        <module>jforum</module>
                 <module>login</module>
