Adding certification to build

--- a/custom_builds/104/distros/11.x/pom.xml
+++ b/custom_builds/104/distros/11.x/pom.xml
@@ -202,7 +202,7 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>yaft</module>
+                <module>certification</module>
             </modules>
         </profile>
         
