Updating bbb url

--- a/custom_builds/152/distros/12.x/pom.xml
+++ b/custom_builds/152/distros/12.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>bbb-tool</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>rsmart</module>
             </modules>
         </profile>
 
