--- a/custom_builds/152/distros/12.x/pom.xml
+++ b/custom_builds/152/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>blogwow</module>
                 <module>attendance</module>
                 <module>bbb-tool</module>
+                <module>certification</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
                 <module>rsmart</module>
