Removing irubrics from build

--- a/custom_builds/180/distros/12.x/pom.xml
+++ b/custom_builds/180/distros/12.x/pom.xml
@@ -120,8 +120,8 @@
                 <module>da_evalprovider</module>
                 <module>attendance</module>
                 <module>bbb-tool</module>
-                <module>irubric-core</module>
-                <module>irubric-tool</module>
+                <!--module>irubric-core</module>
+                <module>irubric-tool</module-->
             </modules>
         </profile>
 
