Include Inotado in build

--- a/custom_builds/172/distros/12.x/pom.xml
+++ b/custom_builds/172/distros/12.x/pom.xml
@@ -115,6 +115,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>inotado</module>
                 <module>blogwow</module>
                 <module>attendance</module>
                 <module>sakora-csv</module>
