--- a/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
+++ b/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
@@ -42,6 +42,11 @@
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-userdetail-provider</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-jldap-provider</artifactId>
         <version>12-SNAPSHOT</version>
       </dependency>
