Adding userdetail to pom

--- a/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
+++ b/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
@@ -24,6 +24,7 @@
     <module>federating</module>
     <module>imsent</module>
     <module>jldap</module>
+    <module>userdetail</module>
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
