--- a/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
+++ b/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/pom.xml
@@ -24,6 +24,7 @@
     <module>federating</module>
     <module>imsent</module>
     <module>jldap</module>
+    <module>userdetail</module>
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
@@ -39,6 +40,11 @@
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-coursemanagement-authz-provider-impl</artifactId>
         <version>12-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-userdetail-provider</artifactId>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
