--- a/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/userdetail/pom.xml
+++ b/providers/sakai-12.x_jldap-auth-caching-cadidate-detail/userdetail/pom.xml
@@ -7,24 +7,19 @@
     <version>12-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <name>sakai-sample-provider</name>
+  <name>sakai-userdetail-provider</name>
   <groupId>org.sakaiproject</groupId>
-  <artifactId>sakai-sample-provider</artifactId>
+  <artifactId>sakai-userdetail-provider</artifactId>
   <organization>
-    <name>University of Michigan</name>
+    <name>Sakai Project Contributor see (see NOTICE.txt)</name>
     <url>http://sakaiproject.org/</url>
   </organization>
-  <inceptionYear>2003</inceptionYear>
+  <inceptionYear>2005</inceptionYear>
   <packaging>jar</packaging>
   <properties>
     <deploy.target />
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-userdetail-provider</artifactId>
-    </dependency>
-    
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-kernel-util</artifactId>
@@ -38,15 +33,33 @@
       <artifactId>sakai-component-manager</artifactId>
     </dependency>
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
     </dependency>
+<!-- This exists strictly so we can control logging
+    	levels in Maven-executed unit tests -->
     <dependency>
-    	<groupId>commons-lang</groupId>
-    	<artifactId>commons-lang</artifactId>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.8</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
-    <resources />
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <property>
+              <name>log4j.configuration</name>
+              <value>log4j.properties</value>
+            </property>
+          </systemProperties>
+        </configuration>
+      </plugin>
+    </plugins>
+<!-- java source -->
   </build>
 </project>
