--- a/custom_builds/6/distros/12.x/pom.xml
+++ b/custom_builds/6/distros/12.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>da_evalprovider</module>
                 <module>attendance</module>
                 <module>bbb-tool</module>
+                <module>iclicker</module>
             </modules>
         </profile>
 
