--- a/custom_builds/103/distros/12.x/pom.xml
+++ b/custom_builds/103/distros/12.x/pom.xml
@@ -74,6 +74,7 @@
                 <module>jsf</module>
                 <module>kernel</module>
                 <module>lessonbuilder</module>
+                <module>library</module>
                 <module>login</module>
                 <module>mailarchive</module>
                 <module>mailsender</module>
