59040 need rsmart for sis

--- a/custom_builds/165/distros/12.x/pom.xml
+++ b/custom_builds/165/distros/12.x/pom.xml
@@ -119,7 +119,7 @@
                 <module>clog</module>
                 <module>evaluation</module>
                 <module>gradebook-export</module>
-                <!--module>rsmart</module-->
+                <module>rsmart</module>
             </modules>
         </profile>
 
