--- a/custom_builds/14/distros/12.x/pom.xml
+++ b/custom_builds/14/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>sipx</module>
             </modules>
         </profile>
 
