--- a/custom_builds/14/distros/12.x/pom.xml
+++ b/custom_builds/14/distros/12.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
                 <module>attendance</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>evaluation</module>
                 <module>sipx</module>
             </modules>
