--- a/custom_builds/181/distros/12.x/pom.xml
+++ b/custom_builds/181/distros/12.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>certification</module>
+                <module>clog</module>
                 <module>evaluation</module>
             </modules>
         </profile>
