--- a/sakai/branches/sakai-12.x/pom.xml
+++ b/sakai/branches/sakai-12.x/pom.xml
@@ -118,9 +118,10 @@
                 <module>web</module>
                 <module>webjars</module>
                 <module>webservices</module>
+                <module>attendance</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>evaluation</module>
-                <!--module>attendance</module-->
             </modules>
         </profile>
 
