Adding attendance to build

--- a/custom_builds/164/distros/11.x/pom.xml
+++ b/custom_builds/164/distros/11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>clog</module>
                 <module>evaluation</module>
 
+                <module>attendance</module>
                 <module>gradebook2</module>
                 <module>rsmart</module>
                 <module>blogwow</module>
