--- a/custom_builds/153/distros/11.x/pom.xml
+++ b/custom_builds/153/distros/11.x/pom.xml
@@ -115,6 +115,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>attendance</module>
                 <module>clog</module>
                 <module>evaluation</module>
 
