--- a/custom_builds/159/distros/12.x/pom.xml
+++ b/custom_builds/159/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>gradebook-export</module>
+                <module>starfish-export</module>
             </modules>
         </profile>
 
