Adding cert tool

--- a/custom_builds/144/distros/11.x/pom.xml
+++ b/custom_builds/144/distros/11.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>blogwow</module>
                 <module>rsmart</module>
                 <module>melete</module>
+                <module>certification</module>
                 <module>etudes-util</module>
                 <module>content-review/turnitin</module>
                 <module>gradebook2</module>
