--- a/custom_builds/142/distros/12.x/pom.xml
+++ b/custom_builds/142/distros/12.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <!--
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
