Adding wild apricot to build

--- a/custom_builds/182/distros/12.x/pom.xml
+++ b/custom_builds/182/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>certification</module>
+                <module>sakai-wildapricot-integration</module>
             </modules>
         </profile>
 
