Updating certification url

--- a/custom_builds/103/distros/12.x/pom.xml
+++ b/custom_builds/103/distros/12.x/pom.xml
@@ -116,7 +116,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <!--module>certification</module-->
+                <module>certification</module>
                 <module>evaluation</module>
             </modules>
         </profile>
