Adding kaltura back to nd

--- a/custom_builds/142/distros/12.x/pom.xml
+++ b/custom_builds/142/distros/12.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>certification</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
-                <!--module>kaltura</module-->
+                <module>kaltura</module>
                 <module>SakaiXAPI-Provider</module>
             </modules>
         </profile>
