--- a/custom_builds/6/distros/19.x/pom.xml
+++ b/custom_builds/6/distros/19.x/pom.xml
@@ -76,7 +76,7 @@
                 <module>jsf2</module>
                 <module>kernel</module>
                 <module>lessonbuilder</module>
-                <module>library</module>
+                <!-- module>library</module -->
                 <module>login</module>
                 <module>mailarchive</module>
                 <module>mailsender</module>
