Updating blogwow url

--- a/custom_builds/18/distros/11.x/pom.xml
+++ b/custom_builds/18/distros/11.x/pom.xml
@@ -119,7 +119,7 @@
                 <module>evaluation</module>
                 <module>etudes-util</module>
                 <module>melete</module>
-                <module>kaltura</module>
+                <!--module>kaltura</module -->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
