--- a/custom_builds/7/distros/11.x/pom.xml
+++ b/custom_builds/7/distros/11.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>melete</module>
                 <module>evaluation</module>
                 <module>blogwow</module>
+                <module>attendance</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
