--- a/custom_builds/67/distros/12.x/pom.xml
+++ b/custom_builds/67/distros/12.x/pom.xml
@@ -118,7 +118,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <!--module>kaltura</module-->
+                <module>scorm</module>
             </modules>
         </profile>
 
