Removing attendance from build for now

--- a/custom_builds/153/distros/12.x/pom.xml
+++ b/custom_builds/153/distros/12.x/pom.xml
@@ -115,7 +115,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>attendance</module>
+                <!--module>attendance</module-->
                 <module>clog</module>
                 <module>rsmart</module>
             </modules>
