--- a/custom_builds/183/distros/12.x/pom.xml
+++ b/custom_builds/183/distros/12.x/pom.xml
@@ -115,8 +115,9 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>blogwow</module>
                 <module>attendance</module>
+                <module>blogwow</module>
+                <module>kaltura</module>
             </modules>
         </profile>
 
