Adding scorm contrib tool to build per 61571

--- a/custom_builds/172/distros/12.x/pom.xml
+++ b/custom_builds/172/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>inotado</module>
                 <module>blogwow</module>
                 <module>attendance</module>
+                <module>scorm</module>
                 <module>sakora-csv</module>
             </modules>
         </profile>
