removing gb2 to speed up build

--- a/custom_builds/144/distros/11.x/pom.xml
+++ b/custom_builds/144/distros/11.x/pom.xml
@@ -122,7 +122,7 @@
                 <module>certification</module>
                 <module>etudes-util</module>
                 <module>content-review/turnitin</module>
-                <module>gradebook2</module>
+                <!-- module>gradebook2</module -->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
