--- a/custom_builds/144/rsmart/sakai-11.x/pom.xml
+++ b/custom_builds/144/rsmart/sakai-11.x/pom.xml
@@ -18,7 +18,7 @@
     <module>util</module>
     <module>user-data-service</module>
     <module>providers</module>
-    <module>gradebook2-export</module>
+    <!-- module>gradebook2-export</module -->
   </modules>
     <dependencyManagement>
         <dependencies>
