--- a/custom_builds/6/distros/19.x/pom.xml
+++ b/custom_builds/6/distros/19.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>certification</module>
+                <module>clog</module>
                 <module>evaluation</module>
 		<!-- module>bbb-tool</module -->
 		<module>da_evalprovider</module>
