Adding da_evalprovider to build

--- a/custom_builds/25/distros/19.x/pom.xml
+++ b/custom_builds/25/distros/19.x/pom.xml
@@ -123,6 +123,7 @@
                 <!--module>bbb-tool</module-->
                 <module>blogwow</module>
                 <module>certification</module>
+                <module>da_evalprovider</module>
                 <module>evaluation</module>
             </modules>
         </profile>
