--- a/custom_builds/180/distros/12.x/pom.xml
+++ b/custom_builds/180/distros/12.x/pom.xml
@@ -121,8 +121,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>certification</module>
-                <!--module>irubric-core</module>
-                <module>irubric-tool</module-->
+                <module>scorm</module>
             </modules>
         </profile>
 
