adding da_evalprovider to build

--- a/custom_builds/25/distros/11.x/pom.xml
+++ b/custom_builds/25/distros/11.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>blogwow</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>da_evalprovider</module>
                 <module>evaluation</module>
                 <module>gradebook-export</module>
                 <module>bbb-tool</module>
