--- a/custom_builds/172/distros/19.x/pom.xml
+++ b/custom_builds/172/distros/19.x/pom.xml
@@ -115,6 +115,7 @@
                 <module>usermembership</module>
                 <module>velocity</module>
                 <module>web</module>
+                <module>webcomponents</module>
                 <module>webjars</module>
                 <module>webservices</module>
 		<!-- Additional Tools -->
