Removing bbb until 19.x branch is created

--- a/custom_builds/149/distros/19.x/pom.xml
+++ b/custom_builds/149/distros/19.x/pom.xml
@@ -120,7 +120,7 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
-                <module>bbb-tool</module>
+                <!-- module>bbb-tool</module -->
                 <module>evaluation</module>
                 <module>rsmart</module>
             </modules>
