--- a/rsmart/sakai-19.x/scorm/impl/pom.xml
+++ b/rsmart/sakai-19.x/scorm/impl/pom.xml
@@ -46,7 +46,7 @@
 <!--org.sakaiprojectsakai-tool-api${sakai.version}-->
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <version>${sakai.servletapi.version}</version>
     </dependency>
 <!--org.sakaiprojectsakai-component-api${sakai.version}provided-->
