--- a/rsmart/sakai-19.x/scorm/tool/pom.xml
+++ b/rsmart/sakai-19.x/scorm/tool/pom.xml
@@ -89,7 +89,7 @@
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <version>${sakai.servletapi.version}</version>
     </dependency>
     <dependency>
