--- a/custom_builds/149/distros/19.x/pom.xml
+++ b/custom_builds/149/distros/19.x/pom.xml
@@ -122,7 +122,7 @@
                 <module>attendance</module>
                 <!-- module>bbb-tool</module -->
                 <module>evaluation</module>
-                <module>rsmart</module>
+                <!--module>rsmart</module -->
             </modules>
         </profile>
 
