--- a/custom_builds/104/distros/19.x/pom.xml
+++ b/custom_builds/104/distros/19.x/pom.xml
@@ -121,10 +121,11 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
-		<!-- module>bbb-tool</module -->
+		<module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>clog</module>
+                <module>gradebook1</module>
             </modules>
         </profile>
 
