--- a/custom_builds/152/distros/19.x/pom.xml
+++ b/custom_builds/152/distros/19.x/pom.xml
@@ -122,7 +122,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
-                <module>rsmart</module>
+                <!-- module>rsmart</module -->
             </modules>
         </profile>
 
