--- a/rsmart/2.9.x/pom.xml
+++ b/rsmart/2.9.x/pom.xml
@@ -49,7 +49,7 @@
     <module>gradebook2-export</module>
     <module>skinsyncjob</module>
     <module>smarthinking</module>
-    <module>rsmart-Decryption</module>
+    <!-- module>rsmart-Decryption</module -->
     <module>turningpoint-job</module>
     <module>entitybroker</module>
   </modules>
