--- a/custom_builds/180/distros/19.x/pom.xml
+++ b/custom_builds/180/distros/19.x/pom.xml
@@ -125,8 +125,8 @@
                 <module>certification</module>
                 <module>da_evalprovider</module>
                 <module>evaluation</module>
-                <!-- module>irubric-core</module>
-                <module>irubric-tool</module -->
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
                 <module>scorm</module>
             </modules>
         </profile>
