--- a/custom_builds/152/distros/19.x/pom.xml
+++ b/custom_builds/152/distros/19.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>blogwow</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
-                <!-- module>rsmart</module -->
+                <module>rsmart</module>
             </modules>
         </profile>
 
