--- a/rsmart/sakai-19.x/customer/customer-int-impl/pom.xml
+++ b/rsmart/sakai-19.x/customer/customer-int-impl/pom.xml
@@ -53,7 +53,7 @@
       <dependency>
           <groupId>commons-lang</groupId>
           <artifactId>commons-lang</artifactId>
-          <version>2.5</version>
+          <version>2.6</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
@@ -63,11 +63,6 @@
           <scope>test</scope>
       </dependency>
       <dependency>
-          <groupId>org.sakaiproject.hybrid</groupId>
-          <artifactId>sakai-hybrid-util</artifactId>
-          <version>1.1.3</version>
-      </dependency>
-      <dependency>
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpclient</artifactId>
           <version>4.1</version>
@@ -75,7 +70,7 @@
       <dependency>
           <groupId>com.jayway.jsonpath</groupId>
           <artifactId>json-path</artifactId>
-          <version>0.5.6</version>
+          <version>${jayway.jsonpath.version}</version>
       </dependency>
 
       <!--
@@ -143,9 +138,9 @@
       <version>1.0.2</version>
     </dependency>
     <dependency>
-      <groupId>net.sf.opencsv</groupId>
+      <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>1.8</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
     	<groupId>org.sakaiproject.emailtemplateservice</groupId>
