Adding gb1 to build

--- a/custom_builds/172/distros/19.x/pom.xml
+++ b/custom_builds/172/distros/19.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>evaluation</module>
+                <module>gradebook1</module>
                 <module>scorm</module>
             </modules>
         </profile>
