--- a/custom_builds/1/distros/19.x/pom.xml
+++ b/custom_builds/1/distros/19.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>gradebook1</module>
             </modules>
         </profile>
 
