Adding sakora and inotado to build

--- a/custom_builds/172/distros/19.x/pom.xml
+++ b/custom_builds/172/distros/19.x/pom.xml
@@ -124,7 +124,9 @@
                 <module>certification</module>
                 <module>evaluation</module>
                 <module>gradebook1</module>
-                <module>scorm</module>
+                <module>inotado</module>
+                <module>sakora-csv</module>
+                <!-- module>scorm</module -->
             </modules>
         </profile>
 
