Removing scorm from build

--- a/custom_builds/180/distros/19.x/pom.xml
+++ b/custom_builds/180/distros/19.x/pom.xml
@@ -127,7 +127,7 @@
                 <module>evaluation</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
-                <module>scorm</module>
+                <!-- module>scorm</module -->
             </modules>
         </profile>
 
