Removing gb2 from build

--- a/custom_builds/181/distros/11.x/pom.xml
+++ b/custom_builds/181/distros/11.x/pom.xml
@@ -120,7 +120,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>etudes-util</module>
-                <module>gradebook2</module>
+                <!-- module>gradebook2</module -->
                 <module>melete</module>
                 <module>scorm</module>
             </modules>
