Adding scorm to build

--- a/custom_builds/181/distros/12.x/pom.xml
+++ b/custom_builds/181/distros/12.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>evaluation</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
