--- a/custom_builds/149/distros/19.x/pom.xml
+++ b/custom_builds/149/distros/19.x/pom.xml
@@ -120,9 +120,9 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
-                <!-- module>bbb-tool</module -->
+                <module>bbb-tool</module>
                 <module>evaluation</module>
-                <!--module>rsmart</module -->
+                <module>rsmart</module>
             </modules>
         </profile>
 
