--- a/custom_builds/155/distros/19.x/pom.xml
+++ b/custom_builds/155/distros/19.x/pom.xml
@@ -122,7 +122,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>rsmart</module>
-                <!-- module>SakaiXAPI-Provider</module -->
+                <module>SakaiXAPI-Provider</module>
             </modules>
         </profile>
 
