--- a/custom_builds/163/distros/12.x/pom.xml
+++ b/custom_builds/163/distros/12.x/pom.xml
@@ -120,7 +120,7 @@
                 <module>blogwow</module>
                 <module>da_evalprovider</module>
                 <module>evaluation</module>
-                <!--module>kaltura</module-->
+                <module>kaltura</module>
                 <module>rsmart</module>
             </modules>
         </profile>
