--- a/providers/sakai-19.x_jldap-auth-caching/jldap/pom.xml
+++ b/providers/sakai-19.x_jldap-auth-caching/jldap/pom.xml
@@ -44,6 +44,10 @@
       <artifactId>commons-pool</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
