Adding rsmart to build

--- a/custom_builds/167/distros/19.x/pom.xml
+++ b/custom_builds/167/distros/19.x/pom.xml
@@ -123,7 +123,7 @@
                 <module>clog</module>
                 <module>certification</module>
                 <module>evaluation</module>
-                <!-- module>rsmart</module -->
+                <module>rsmart</module>
             </modules>
         </profile>
 
