--- a/custom_builds/183/distros/12.x/pom.xml
+++ b/custom_builds/183/distros/12.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>kaltura</module>
+                <module>linktool</module>
             </modules>
         </profile>
 
