--- a/custom_builds/68/distros/19.x/pom.xml
+++ b/custom_builds/68/distros/19.x/pom.xml
@@ -123,7 +123,7 @@
                 <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <!-- module>iclicker</module -->
+                <module>iclicker</module>
             </modules>
         </profile>
 
