Adding gb export back to build

--- a/custom_builds/165/distros/19.x/pom.xml
+++ b/custom_builds/165/distros/19.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>evaluation</module>
-                <!-- module>gradebook-export</module -->
+                <module>gradebook-export</module>
                 <module>rsmart</module>
             </modules>
         </profile>
