--- a/custom_builds/6/distros/19.x/pom.xml
+++ b/custom_builds/6/distros/19.x/pom.xml
@@ -127,6 +127,7 @@
                 <module>evaluation</module>
 		<module>bbb-tool</module>
 		<module>da_evalprovider</module>
+		<module>legacy-language-packs</module>
 		<module>iclicker</module>
             </modules>
         </profile>
