--- a/custom_builds/5/distros/19.x/pom.xml
+++ b/custom_builds/5/distros/19.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
+                <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>gradebook1</module>
