--- a/custom_builds/25/distros/19.x/pom.xml
+++ b/custom_builds/25/distros/19.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>certification</module>
                 <module>da_evalprovider</module>
                 <module>evaluation</module>
+                <module>gradebook_export</module>
             </modules>
         </profile>
 
