build library for the sync

--- a/custom_builds/163/distros/12.x/pom.xml
+++ b/custom_builds/163/distros/12.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>evaluation</module>
                 <module>kaltura</module>
                 <module>rsmart</module>
+                <module>library</module>
             </modules>
         </profile>
 
