Adding cert tool to build

--- a/custom_builds/163/distros/12.x/pom.xml
+++ b/custom_builds/163/distros/12.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>kaltura</module>
                 <module>rsmart</module>
                 <module>library</module>
+                <module>certification</module>
             </modules>
         </profile>
 
