--- a/sakai/branches/sakai-19.x/pom.xml
+++ b/sakai/branches/sakai-19.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
+                <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>evaluation</module>
