--- a/providers/sakai-19.x_jldap-auth-caching/pom.xml
+++ b/providers/sakai-19.x_jldap-auth-caching/pom.xml
@@ -24,6 +24,7 @@
     <module>federating</module>
     <module>imsent</module>
     <module>jldap</module>
+    <module>userdetail</module>
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
@@ -43,6 +44,11 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-jldap-provider</artifactId>
+        <version>19-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-userdetail-provider</artifactId>
         <version>19-SNAPSHOT</version>
       </dependency>
       <dependency>
