--- a/providers/sakai-19.x_jldap-auth-caching/component/pom.xml
+++ b/providers/sakai-19.x_jldap-auth-caching/component/pom.xml
@@ -30,6 +30,10 @@
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-jldap-provider</artifactId>
 		</dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-userdetail-provider</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.sakaiproject</groupId>
