--- a/custom_builds/181/distros/19.x/pom.xml
+++ b/custom_builds/181/distros/19.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>evaluation</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
