--- a/webservices/sakai-20.x/cxf/pom.xml
+++ b/webservices/sakai-20.x/cxf/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
