--- a/sakai/branches/sakai-20.x/pom.xml
+++ b/sakai/branches/sakai-20.x/pom.xml
@@ -119,11 +119,11 @@
                 <module>webjars</module>
                 <module>webservices</module>
 		<!-- Additional Tools -->
-                <module>attendance</module>
-                <module>bbb-tool</module>
-                <module>blogwow</module>
-                <module>certification</module>
-                <module>evaluation</module>
+                <!-- module>attendance</module -->
+                <!-- module>bbb-tool</module -->
+                <!-- module>blogwow</module -->
+                <!-- module>certification</module -->
+                <!-- module>evaluation</module -->
             </modules>
         </profile>
 
