--- a/custom_builds/51/distros/20.x/pom.xml
+++ b/custom_builds/51/distros/20.x/pom.xml
@@ -56,6 +56,7 @@
                 <module>commons</module>
                 <module>config</module>
                 <module>cloud-content</module>
+                <module>cloud-storage</module>
                 <module>content</module>
                 <module>content-review</module>
                 <module>courier</module>
