--- a/custom_builds/6/distros/19.x/pom.xml
+++ b/custom_builds/6/distros/19.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>evaluation</module>
+                <module>rsmart</module>
 		<module>bbb-tool</module>
 		<module>da_evalprovider</module>
 		<module>iclicker</module>
