--- a/sakai/branches/sakai-20.x/pom.xml
+++ b/sakai/branches/sakai-20.x/pom.xml
@@ -120,7 +120,7 @@
                 <module>webjars</module>
                 <module>webservices</module>
 		<!-- Additional Tools -->
-                <!-- module>attendance</module -->
+                <module>attendance</module>
                 <!-- module>bbb-tool</module -->
                 <!-- module>blogwow</module -->
                 <!-- module>certification</module -->
