--- a/custom_builds/51/distros/20.x/pom.xml
+++ b/custom_builds/51/distros/20.x/pom.xml
@@ -120,8 +120,9 @@
                 <module>webjars</module>
                 <module>webservices</module>
 		<!-- Additional Tools -->
-                <!-- module>attendance</module -->
-                <!-- module>blogwow</module -->
+                <module>attendance</module>
+                <module>blogwow</module>
+                <module>clog</module>
             </modules>
         </profile>
 
