Adding GB1 to build

--- a/custom_builds/18/distros/19.x/pom.xml
+++ b/custom_builds/18/distros/19.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>gradebook1</module>
                 <module>kaltura</module>
             </modules>
         </profile>
