Adding clog to 12

--- a/custom_builds/51/distros/12.x/pom.xml
+++ b/custom_builds/51/distros/12.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
                 <module>attendance</module>
                 <module>blogwow</module>
+                <module>clog</module>
                 <module>kaltura</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
