--- a/custom_builds/181/distros/20.x/pom.xml
+++ b/custom_builds/181/distros/20.x/pom.xml
@@ -121,10 +121,10 @@
                 <module>webservices</module>
 		<!-- Additional Tools -->
                 <module>attendance</module>
-                <!-- module>bbb-tool</module -->
-                <!-- module>blogwow</module -->
-                <!-- module>certification</module -->
-                <!-- module>evaluation</module -->
+                <module>blogwow</module>
+                <module>clog</module>
+                <module>certification</module>
+                <module>evaluation</module>
             </modules>
         </profile>
 
