--- a/custom_builds/51/distros/20.x/pom.xml
+++ b/custom_builds/51/distros/20.x/pom.xml
@@ -123,6 +123,8 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>clog</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
             </modules>
         </profile>
 
