--- a/custom_builds/51/distros/20.x/pom.xml
+++ b/custom_builds/51/distros/20.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>clog</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>kaltura</module>
             </modules>
         </profile>
 
