include the library

--- a/custom_builds/181/distros/20.x/pom.xml
+++ b/custom_builds/181/distros/20.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>clog</module>
                 <module>certification</module>
                 <module>evaluation</module>
+                <module>library</module>
             </modules>
         </profile>
 
