--- a/custom_builds/142/distros/19.x/pom.xml
+++ b/custom_builds/142/distros/19.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>SakaiXAPI-Provider</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>gradebook1</module>
             </modules>
         </profile>
 
