Adding gb1 to build

--- a/custom_builds/68/distros/20.x/pom.xml
+++ b/custom_builds/68/distros/20.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>gradebook1</module>
                 <module>iclicker</module>
             </modules>
         </profile>
