--- a/custom_builds/7/distros/20.x/pom.xml
+++ b/custom_builds/7/distros/20.x/pom.xml
@@ -122,6 +122,7 @@
 		<!-- Additional Tools -->
                 <module>attendance</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>evaluation</module>
                 <module>gradebook1</module>
             </modules>
