--- a/providers/sakai-19.x_jldap-auth-caching-negative-cache/component/pom.xml
+++ b/providers/sakai-19.x_jldap-auth-caching-negative-cache/component/pom.xml
@@ -30,6 +30,10 @@
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-jldap-provider</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.sakaiproject</groupId>
+			<artifactId>sakai-unboundid-provider</artifactId>
+		</dependency>
 
     <dependency>
       <groupId>org.sakaiproject</groupId>
