--- a/providers/sakai-19.x_jldap-auth-caching-negative-cache/pom.xml
+++ b/providers/sakai-19.x_jldap-auth-caching-negative-cache/pom.xml
@@ -48,6 +48,11 @@
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-unboundid-provider</artifactId>
+        <version>19-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-kerberos-provider</artifactId>
         <version>19-SNAPSHOT</version>
       </dependency>
