--- a/custom_builds/155/distros/20.x/pom.xml
+++ b/custom_builds/155/distros/20.x/pom.xml
@@ -122,6 +122,7 @@
 		<!-- Additional Tools -->
                 <module>attendance</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>rsmart</module>
             </modules>
         </profile>
